--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
   <meta name="author" content="Pixfabrik, LLC" />
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.0.0/build/cssreset/reset-min.css"> 
 	<link rel="stylesheet" type="text/css" href="main.css"> 
+  <script type="text/javascript">
+  
+    // Google Analytics Start
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-23359564-2']);
+    _gaq.push(['_trackPageview']);
+    
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+    // Google Analytics End
+  
+  </script>
 </head>
 <body> 
   <div id="footer">Copyright 2011, Pixfabrik, LLC&nbsp;&nbsp;&#149;&nbsp;&nbsp;factory image by ... </div>
