--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
 <body> 
   <div id="main">
     <p>We make nice things.</p>
-    <p>Check out our latest, <a href="http://www.letsfathom.com">Fathom</a>:</p>
-    <p><a href="http://www.letsfathom.com"><img id="fathom" src="img/fathom.png"></a></p>
+    <p><a href="http://www.driftory.com">Driftory</a>:</p>
+    <p><a href="http://www.driftory.com"><img class="icon" src="img/driftory.png"></a></p>
+    <p><a href="http://www.letsfathom.com">Fathom</a>:</p>
+    <p><a href="http://www.letsfathom.com"><img class="icon" src="img/fathom.png"></a></p>
     <p>Contact: <a href="mailto:ian@pixfabrik.com">ian@pixfabrik.com</a></p>
   </div>
-  <div id="footer">Copyright 2011, Pixfabrik, LLC&nbsp;&nbsp;&#149;&nbsp;&nbsp;<a href="http://www.flickr.com/photos/amagill/3268315787/">Machine</a> image by Andrew Magill</div>
+  <div id="footer">Copyright 2011-2013, Pixfabrik, LLC&nbsp;&nbsp;&#149;&nbsp;&nbsp;<a href="http://www.flickr.com/photos/amagill/3268315787/">Machine</a> image by Andrew Magill</div>
 </body>
 </html>
