updated with latest

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="description" content="We make nice things." />
   <meta name="keywords" content="web development" />
   <meta name="author" content="Pixfabrik, LLC" />
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.0.0/build/cssreset/reset-min.css"> 
-	<link rel="stylesheet" type="text/css" href="main.css"> 
+	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.0.0/build/cssreset/reset-min.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
   <script type="text/javascript">
   
     // Google Analytics Start
@@ -23,15 +23,25 @@
   
   </script>
 </head>
-<body> 
+<body>
   <div id="main">
-    <p>We make nice things.</p>
-    <p><a href="http://www.driftory.com">Driftory</a>:</p>
-    <p><a href="http://www.driftory.com"><img class="icon" src="img/driftory.png"></a></p>
-    <p><a href="http://www.letsfathom.com">Fathom</a>:</p>
-    <p><a href="http://www.letsfathom.com"><img class="icon" src="img/fathom.png"></a></p>
-    <p>Contact: <a href="mailto:ian@pixfabrik.com">ian@pixfabrik.com</a></p>
+    <p class="center">We make nice things.</p>
+    <div class="things">
+      <div class="thing">
+        <p><a href="http://www.artywidget.com">Arty Widget</a>:</p>
+        <p><a href="http://www.artywidget.com"><img class="icon" src="img/artywidget.jpg"></a></p>
+      </div>
+      <div class="thing">
+        <p><a href="http://www.letsfathom.com">Fathom</a>:</p>
+        <p><a href="http://www.letsfathom.com"><img class="icon" src="img/fathom.jpg"></a></p>
+      </div>
+      <div class="thing">
+        <p><a href="http://www.driftory.com">Driftory</a>:</p>
+        <p><a href="http://www.driftory.com"><img class="icon" src="img/driftory.png"></a></p>
+      </div>
+    </div>
+    <p class="center">Contact: <a href="mailto:ian@pixfabrik.com">ian@pixfabrik.com</a></p>
   </div>
-  <div id="footer">Copyright 2011-2013, Pixfabrik, LLC&nbsp;&nbsp;&#149;&nbsp;&nbsp;<a href="http://www.flickr.com/photos/amagill/3268315787/">Machine</a> image by Andrew Magill</div>
+  <div id="footer">Copyright 2011-2018, Pixfabrik, LLC&nbsp;&nbsp;&#149;&nbsp;&nbsp;<a href="http://www.flickr.com/photos/amagill/3268315787/">Machine</a> image by Andrew Magill</div>
 </body>
 </html>
