Living Worlds page.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <p class="center">We make nice things.</p>
     <div class="things">
       <div class="thing">
+        <p><a href="/livingworlds/">Living Worlds</a>:</p>
+        <p><a href="/livingworlds/"><img class="icon" src="img/livingworlds.jpg"></a></p>
+      </div>
+      <div class="thing">
         <p><a href="http://www.artywidget.com">Arty Widget</a>:</p>
         <p><a href="http://www.artywidget.com"><img class="icon" src="img/artywidget.jpg"></a></p>
       </div>
