--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="description" content="We make nice things." />
   <meta name="keywords" content="web development" />
   <meta name="author" content="Pixfabrik, LLC" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.0.0/build/cssreset/reset-min.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
   <script type="text/javascript">
@@ -25,7 +26,7 @@
 </head>
 <body>
   <div id="main">
-    <p class="center">We make nice things.</p>
+    <p class="center margin">We make nice things.</p>
     <div class="things">
       <div class="thing">
         <p><a href="/livingworlds/">Living Worlds</a>:</p>
@@ -44,7 +45,7 @@
         <p><a href="http://www.driftory.com"><img class="icon" src="img/driftory.png"></a></p>
       </div>
     </div>
-    <p class="center">Contact: <a href="mailto:ian@pixfabrik.com">ian@pixfabrik.com</a></p>
+    <p class="center margin">Contact: <a href="mailto:ian@pixfabrik.com">ian@pixfabrik.com</a></p>
   </div>
   <div id="footer">Copyright 2011-2018, Pixfabrik, LLC&nbsp;&nbsp;&#149;&nbsp;&nbsp;<a href="http://www.flickr.com/photos/amagill/3268315787/">Machine</a> image by Andrew Magill</div>
 </body>
