--- a/livingworlds/index.html
+++ b/livingworlds/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Living Worlds - Art by Mark Ferrari</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="style/main.css">
 	</head>
 	<body>
