Addded privacy and support pages.

--- a/livingworlds/index.html
+++ b/livingworlds/index.html
@@ -7,13 +7,16 @@
 		<link rel="stylesheet" href="style/main.css">
 	</head>
 	<body>
-		<h1>Living Worlds - Art by Mark Ferrari</h1>
-		<h2>Coming soon to iOS and Android!</h2>
+		<h1 class="center">Living Worlds - Art by Mark Ferrari</h1>
+		<h2 class="center">Coming soon to iOS and Android!</h2>
 		<div class="content">
 			<div class="left">
 				<img class="scene" src="img/scene.gif" />
 			</div>
 			<div class="right">
+				<div>This new Living Worlds app is a modern recreation of a set of classic pixel art scenes first published in the early 90s as part of an "illustrated personal organizer" (named Seize the Day) and seen as screenshots across the Internet since then. These scenes were created by Mark Ferrari, legendary artist from such classic games as Loom and The Secret of Monkey Island as well as the recent Thimbleweed Park.</div>
+				<p>Now, 25 years later, Ian Gilman, the original software developer, has resurrected the Living Worlds, with Mark's support and additional code from Joseph Huckaby.  Pixfabrik is excited to release a new world each month through 2019. Now you can enjoy this memorable art on your phone or tablet. Each month is a new world, one of the original twelve created by Mark Ferrari, brought back to life in its original glory.  Once again the sun rises and falls, the weather changes, the image “lives” through small details that come and go.  They are beautiful images that draw you in, suggesting stories, and rewarding quiet observation.</p>
+				<p><a href="https://medium.com/@iangilman/living-worlds-for-ios-android-46b4a4e9b048">Learn more here</a></p>
 				<div class="signup">
 					<!-- Begin MailChimp Signup Form -->
 					<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
@@ -78,7 +81,18 @@
 					<!--End mc_embed_signup-->
 				</div>
 				
-				<p>Or follow us on <a href="https://twitter.com/livingworldsart" alt="Living Worlds Twitter">Twitter</a></p>
+				<p class="center">Or follow us on <a href="https://twitter.com/livingworldsart" alt="Living Worlds Twitter">Twitter</a></p>
+			</div>
+		</div>
+		<div class="footer center">
+			<div class="links">
+				<a href="/">Pixfabrik</a> •
+				<a href="/livingworlds/">Living Worlds</a> •
+				<a href="/livingworlds/support/">Support</a> •
+				<a href="/livingworlds/privacy/">Privacy Policy</a>
+			</div>
+			<div class="copyright">
+				&copy; 2018, Pixfabrik LLC</div>
 			</div>
 		</div>
 	</body>
