--- a/livingworlds/index.html
+++ b/livingworlds/index.html
@@ -14,9 +14,11 @@
 				<img class="scene" src="img/scene.gif" />
 			</div>
 			<div class="right">
-				<div>This new Living Worlds app is a modern recreation of a set of classic pixel art scenes first published in the early 90s as part of an "illustrated personal organizer" (named Seize the Day) and seen as screenshots across the Internet since then. These scenes were created by Mark Ferrari, legendary artist from such classic games as Loom and The Secret of Monkey Island as well as the recent Thimbleweed Park.</div>
-				<p>Now, 25 years later, Ian Gilman, the original software developer, has resurrected the Living Worlds, with Mark's support and additional code from Joseph Huckaby.  Pixfabrik is excited to release a new world each month through 2019. Now you can enjoy this memorable art on your phone or tablet. Each month is a new world, one of the original twelve created by Mark Ferrari, brought back to life in its original glory.  Once again the sun rises and falls, the weather changes, the image “lives” through small details that come and go.  They are beautiful images that draw you in, suggesting stories, and rewarding quiet observation.</p>
-				<p><a href="https://medium.com/@iangilman/living-worlds-for-ios-android-46b4a4e9b048">Learn more here</a></p>
+				<div>This new Living Worlds app is a modern recreation of a set of classic pixel art scenes first published in the early 90s as part of an "illustrated personal organizer" (named Seize the Day) and seen as screenshots across the Internet since then. These scenes were created by <a href="http://markferrari.com/" target="_blank">Mark Ferrari</a>, legendary artist from such classic games as Loom and The Secret of Monkey Island as well as the recent <a href="https://thimbleweedpark.com/" target="_blank">Thimbleweed Park</a>. Now, 25 years later, <a href="http://iangilman.com/" target="_blank">Ian Gilman</a>, the original software developer, has resurrected the Living Worlds, with Mark's support and additional code from <a href="https://twitter.com/jhuckaby" target="_blank">Joseph Huckaby</a>. There may be copycats, but this is the only authentic version from the original creators!</div>
+				<p>This initial release of the app contains the January scene in its full glory. The sun rises and falls in real time, snow comes and goes, the moon and stars cross the sky. Smaller details like chimney smoke and animal footprints come and go. The image "lives" throughout the day, drawing you in, suggesting stories, and rewarding quiet observation.</p>
+				<p>Through 2019 we'll continue bringing these worlds back to life, releasing a new scene every month as part of this app; no additional purchase necessary.</p>
+				<p><a href="https://medium.com/@iangilman/living-worlds-for-ios-android-46b4a4e9b048" target="_blank">Learn more about the history and technology of this project.</a></p>
+				<p>Come join us for this 25th anniversary celebration of these unique artworks!</p>
 				<div class="signup">
 					<!-- Begin MailChimp Signup Form -->
 					<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
@@ -80,8 +82,7 @@
 					<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 					<!--End mc_embed_signup-->
 				</div>
-				
-				<p class="center">Or follow us on <a href="https://twitter.com/livingworldsart" alt="Living Worlds Twitter">Twitter</a></p>
+				<p class="center">Or follow us on <a href="https://twitter.com/livingworldsart" target="_blank" alt="Living Worlds Twitter">Twitter</a></p>
 			</div>
 		</div>
 		<div class="footer center">
