--- a/livingworlds/privacy/index.html
+++ b/livingworlds/privacy/index.html
@@ -24,5 +24,20 @@
 				&copy; 2018, Pixfabrik LLC</div>
 			</div>
 		</div>
+		<script type="text/javascript">
+	  
+	    // Google Analytics Start
+	    var _gaq = _gaq || [];
+	    _gaq.push(['_setAccount', 'UA-23359564-2']);
+	    _gaq.push(['_trackPageview']);
+	    
+	    (function() {
+	      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	    })();
+	    // Google Analytics End
+	  
+	  </script>
 	</body>
 </html>
