Live android button

--- a/livingworlds/index.html
+++ b/livingworlds/index.html
@@ -8,14 +8,17 @@
 	</head>
 	<body>
 		<h1 class="center">Living Worlds - Art by Mark Ferrari</h1>
-		<h2 class="center">Coming soon to iOS and Android!</h2>
+		<div class="center">
+			<a href='https://play.google.com/store/apps/details?id=com.pixfabrik.livingworlds&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img class="android" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
+			<div class="ios">Coming soon to iOS!</div>
+		</div>
 		<div class="content">
 			<div class="left">
 				<img class="scene" src="img/scene.gif" />
 			</div>
 			<div class="right">
-				<div>This new Living Worlds app is a modern recreation of a set of classic pixel art scenes first published in the early 90s as part of an "illustrated personal organizer" (named Seize the Day) and seen as screenshots across the Internet since then. These scenes were created by <a href="http://markferrari.com/" target="_blank">Mark Ferrari</a>, legendary artist from such classic games as Loom and The Secret of Monkey Island as well as the recent <a href="https://thimbleweedpark.com/" target="_blank">Thimbleweed Park</a>. Now, 25 years later, <a href="http://iangilman.com/" target="_blank">Ian Gilman</a>, the original software developer, has resurrected the Living Worlds, with Mark's support and additional code from <a href="https://twitter.com/jhuckaby" target="_blank">Joseph Huckaby</a>. There may be copycats, but this is the only authentic version from the original creators!</div>
-				<p>This initial release of the app contains the January scene in its full glory. The sun rises and falls in real time, snow comes and goes, the moon and stars cross the sky. Smaller details like chimney smoke and animal footprints come and go. The image "lives" throughout the day, drawing you in, suggesting stories, and rewarding quiet observation.</p>
+				<div>This new Living Worlds app is a modern recreation of a set of dynamic pixel art scenes first published in the early 90s as part of an "illustrated personal organizer" named Seize the Day, and seen as screenshots across the Internet since then. These scenes were created by <a href="http://markferrari.com/" target="_blank">Mark Ferrari</a>, legendary artist from such classic games as Loom and The Secret of Monkey Island as well as the recent <a href="https://thimbleweedpark.com/" target="_blank">Thimbleweed Park</a>. Now, 25 years later, <a href="http://iangilman.com/" target="_blank">Ian Gilman</a>, the original software developer, has resurrected the Living Worlds, with Mark's support and additional code from <a href="https://twitter.com/jhuckaby" target="_blank">Joseph Huckaby</a>. There may be copycats, but this is the only authentic version from the original creators!</div>
+				<p>This initial release of the app contains the January scene in its full glory. The sun rises and falls in real time, snowstorms pass through, the moon and stars cross the sky. Smaller details like chimney smoke and animal footprints come and go. The image "lives" throughout the day, drawing you in, suggesting stories, and rewarding quiet observation.</p>
 				<p>Through 2019 we'll continue bringing these worlds back to life, releasing a new scene every month as part of this app; no additional purchase necessary.</p>
 				<p><a href="https://medium.com/@iangilman/living-worlds-for-ios-android-46b4a4e9b048" target="_blank">Learn more about the history and technology of this project.</a></p>
 				<p>Come join us for this 25th anniversary celebration of these unique artworks!</p>
@@ -55,7 +58,7 @@
 					<div id="mc_embed_signup">
 						<form action="https://pixfabrik.us16.list-manage.com/subscribe/post?u=16c6d9fae0acb2eabfe47e904&amp;id=d2778b76dd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 							<div id="mc_embed_signup_scroll">
-								<h2>Sign up here for news as the project develops</h2>
+								<h2>Sign up here for news about the app</h2>
 								<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 								<div class="mc-field-group">
 									<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
