Better large screen layout

--- a/livingworlds/index.html
+++ b/livingworlds/index.html
@@ -13,7 +13,7 @@
 			<div class="ios">Coming soon to iOS!</div>
 		</div>
 		<div class="content">
-			<div class="left">
+			<div class="left center">
 				<img class="scene" src="img/scene.gif" />
 			</div>
 			<div class="right">
