--- a/livingworlds/index.html
+++ b/livingworlds/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1 class="center">Living Worlds - Art by Mark Ferrari</h1>
 		<div class="center">
-			<a href='https://play.google.com/store/apps/details?id=com.pixfabrik.livingworlds&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img class="android" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
+			<a href="https://play.google.com/store/apps/details?id=com.pixfabrik.livingworlds&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1" target="_blank"><img class="android" alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png"/></a>
 			<div class="ios">Coming soon to iOS!</div>
 		</div>
 		<div class="content">
