--- a/livingworlds/support/index.html
+++ b/livingworlds/support/index.html
@@ -11,8 +11,12 @@
 			<h1 class="center">Living Worlds Support</h1>
 			<p>Please email <a href="mailto:support@pixfabrik.com">support@pixfabrik.com</a> with questions and comments!</p>
 			<h2>FAQ</h2>
-			<h3>Why are the images portrait when Joseph's demo is landscape?</h3>
-			<p>Note that <a href="http://www.effectgames.com/demos/worlds/">Joseph's demo</a> actually uses modified versions of the original art; Wizards of the Coast commissioned updates and expansions to a few of the images for their game battle mage, and those are the images Joseph used. There isn't a complete set of 12 months in that size, however, nor are any of the overlays made for that size. Because of that, and to as faithfully as possible re-create the original Seize the Day worlds, we're using the original graphics.</p>
+			<h3>When will the iOS version be available?</h3>
+			<p>We're currently in the review process for the iOS App Store, which unfortunately makes timing unpredictable. We're working on it, though and will update via the newsletter and Twitter as soon as it's released!</p>
+			<h3>Can I use the Worlds as live wallpaper?</h3>
+			<p>The app does not yet support Android live wallpaper, but we plan on adding that feature in the future. This will be Android-only, as iOS does not (yet) support live wallpapers.</p>
+			<h3>Why are the images portrait orientation when Joseph's demo is landscape?</h3>
+			<p><a href="http://www.effectgames.com/demos/worlds/">Joseph's demo</a> actually uses modified versions of the original Seize the Day art; Wizards of the Coast and Acclaim Entertainment commissioned updates and expansions to a few of the images for their game <a href="https://www.mobygames.com/game/magic-the-gathering-battlemage">Magic: The Gathering - Battlemage</a>, and those are the images Joseph used. There isn't a complete set of 12 months in that size, however, nor are any of the overlays made for that size. Because of that, and to as faithfully as possible re-create the original Seize the Day worlds, we're using the original graphics.</p>
 		</div>
 		<div class="footer center">
 			<div class="links">
