Updated for iOS app.

--- a/livingworlds/support/index.html
+++ b/livingworlds/support/index.html
@@ -11,8 +11,6 @@
 			<h1 class="center">Living Worlds Support</h1>
 			<p>Please email <a href="mailto:support@pixfabrik.com">support@pixfabrik.com</a> with questions and comments!</p>
 			<h2>FAQ</h2>
-			<h3>When will the iOS version be available?</h3>
-			<p>We're currently in the review process for the iOS App Store, which unfortunately makes timing unpredictable. We're working on it, though and will update via the newsletter and Twitter as soon as it's released!</p>
 			<h3>Can I use the Worlds as live wallpaper?</h3>
 			<p>The app does not yet support Android live wallpaper, but we plan on adding that feature in the future. This will be Android-only, as iOS does not (yet) support live wallpapers.</p>
 			<h3>Why are the images portrait orientation when Joseph's demo is landscape?</h3>
@@ -26,7 +24,7 @@
 				<a href="/livingworlds/privacy/">Privacy Policy</a>
 			</div>
 			<div class="copyright">
-				&copy; 2018, Pixfabrik LLC</div>
+				&copy; 2018-2019, Pixfabrik LLC</div>
 			</div>
 		</div>
 		<script type="text/javascript">
