--- a/livingworlds/privacy/index.html
+++ b/livingworlds/privacy/index.html
@@ -21,7 +21,7 @@
 				<a href="/livingworlds/privacy/">Privacy Policy</a>
 			</div>
 			<div class="copyright">
-				&copy; 2018, Pixfabrik LLC</div>
+				&copy; 2018-2019, Pixfabrik LLC</div>
 			</div>
 		</div>
 		<script type="text/javascript">
