--- a/livingworlds/index.html
+++ b/livingworlds/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1 class="center">Living Worlds - Art by Mark Ferrari</h1>
 		<div class="center">
-			<a href="#" target="_blank"><img class="ios" src="/livingworlds/img/apple-store-badge.svg" /></a>
+			<a href="https://itunes.apple.com/us/app/living-worlds-mark-ferrari/id1371140984" target="_blank"><img class="ios" src="/livingworlds/img/apple-store-badge.svg" /></a>
 			<a href="https://play.google.com/store/apps/details?id=com.pixfabrik.livingworlds&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1" target="_blank"><img class="android" alt="Get it on Google Play" src="/livingworlds/img/google-play-badge.png"/></a>
 		</div>
 		<div class="content">
