--- a/livingworlds/index.html
+++ b/livingworlds/index.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class="content">
 			<div class="left center">
-				<img class="scene" src="img/scene.gif" />
+				<img class="scene" src="img/jan.png" />
 			</div>
 			<div class="right">
 				<div>This new Living Worlds app is a modern recreation of a set of dynamic pixel art scenes first published in the early 90s as part of an "illustrated personal organizer" named Seize the Day, and seen as screenshots across the Internet since then. These scenes were created by <a href="http://markferrari.com/" target="_blank">Mark Ferrari</a>, legendary artist from such classic games as Loom and The Secret of Monkey Island as well as the recent <a href="https://thimbleweedpark.com/" target="_blank">Thimbleweed Park</a>. Now, 25 years later, <a href="http://iangilman.com/" target="_blank">Ian Gilman</a>, the original software developer, has resurrected the Living Worlds, with Mark's support and additional code from <a href="https://twitter.com/jhuckaby" target="_blank">Joseph Huckaby</a>. There may be copycats, but this is the only authentic version from the original creators!</div>
@@ -41,6 +41,8 @@
 				&copy; 2018-2019, Pixfabrik LLC</div>
 			</div>
 		</div>
+		<script src="/lib/jquery-3.3.1.min.js"></script>
+		<script src="/livingworlds/js/app.js"></script>
 		<script type="text/javascript">
 	  
 	    // Google Analytics Start
