--- a/livingworlds/index.html
+++ b/livingworlds/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Living Worlds - Art by Mark Ferrari</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="style/main.css">
+		<link rel="stylesheet" href="style/main.css?cb=1">
 	</head>
 	<body>
 		<h1 class="center">Living Worlds - Art by Mark Ferrari</h1>
