--- a/livingworlds/support/index.html
+++ b/livingworlds/support/index.html
@@ -13,6 +13,8 @@
 			<h2>FAQ</h2>
 			<h3>Can I use the Worlds as a live wallpaper?</h3>
 			<p>Yes, the Android version of the app supports live wallpaper! Unfortunately iOS does not (yet) support live wallpapers.</p>
+			<h3>Can I use Android dark mode with the live wallpaper?</h3>
+			<p>Unfortunately Android Pie's dark mode doesn't work with third party live wallpapers (such as Living Worlds). Android Q's dark mode does, however.</p>
 			<h3>Why are the images portrait orientation when Joseph's demo is landscape?</h3>
 			<p><a href="http://www.effectgames.com/demos/worlds/">Joseph's demo</a> actually uses modified versions of the original Seize the Day art; Wizards of the Coast and Acclaim Entertainment commissioned updates and expansions to a few of the images for their game <a href="https://www.mobygames.com/game/magic-the-gathering-battlemage">Magic: The Gathering - Battlemage</a>, and those are the images Joseph used. There isn't a complete set of 12 months in that size, however, nor are any of the overlays made for that size. Because of that, and to as faithfully as possible re-create the original Seize the Day worlds, we're using the original graphics.</p>
 		</div>
