October release; new FAQ

--- a/livingworlds/support/index.html
+++ b/livingworlds/support/index.html
@@ -17,6 +17,9 @@
 			<p>Unfortunately the dark mode in Android 9 (Pie) doesn't work with third party live wallpapers (such as Living Worlds). Android Q's dark mode does, however.</p>
 			<h3>Why are the images portrait orientation when Joseph's demo is landscape?</h3>
 			<p><a href="http://www.effectgames.com/demos/worlds/">Joseph's demo</a> actually uses modified versions of the original Seize the Day art; Wizards of the Coast and Acclaim Entertainment commissioned updates and expansions to a few of the images for their game <a href="https://www.mobygames.com/game/magic-the-gathering-battlemage">Magic: The Gathering - Battlemage</a>, and those are the images Joseph used. There isn't a complete set of 12 months in that size, however, nor are any of the overlays made for that size. Because of that, and to as faithfully as possible re-create the original Seize the Day worlds, we're using the original graphics.</p>
+			<h3>Will more Living World scenes come out after the end of the year?</h3>
+			<p>Reviving these images is already taking a lot of my time, but to make new ones would require us to get together tools that Mark could use to create new ones, and of course for Mark to take the time needed to make them.</p>
+			<p>In <a href="http://www.effectgames.com/effect/article-Q_A_with_Mark_J_Ferrari.html" target="_blank">this Q & A</a>, as well as in <a href="https://www.youtube.com/watch?v=aMcJ1Jvtef0" target="_blank">this talk</a>, Mark talks about some of the challenges involved in creating images like this today. If we had all the time in the world (i.e. if this app was making enough money for us to live on), we'd love to build new tools for Mark! With today's computers we could take the work he pioneered back in the 90s and bring it to a whole new level. Maybe someday…</p>
 		</div>
 		<div class="footer center">
 			<div class="links">
