Living Worlds FAQ and Instagram updates

--- a/livingworlds/index.html
+++ b/livingworlds/index.html
@@ -38,7 +38,7 @@
 				</div>
 				<br/><br/>
 				<p class="center">Learn more about the <a href="https://medium.com/@iangilman/living-worlds-for-ios-android-46b4a4e9b048" target="_blank">history and technology</a> of this project.</p>
-				<p class="center">Sign up for <a href="http://eepurl.com/dE9C1r" target="_blank">our email list</a> or follow us <a href="https://twitter.com/livingworldsart" target="_blank" alt="Living Worlds Twitter">on Twitter</a>.</p>
+				<p class="center">Sign up for <a href="http://eepurl.com/dE9C1r" target="_blank">our email list</a> or follow us on <a href="https://twitter.com/livingworldsart" target="_blank" alt="Living Worlds Twitter">Twitter</a> or <a href="https://instagram.com/livingworldsart/" target="_blank" alt="Living Worlds Instagram">Instagram</a>.</p>
 			</div>
 		</div>
 		<div class="footer center">
@@ -49,7 +49,7 @@
 				<a href="/livingworlds/privacy/">Privacy Policy</a>
 			</div>
 			<div class="copyright">
-				&copy; 2018-2019, Pixfabrik LLC</div>
+				&copy; 2018-2020, Pixfabrik LLC</div>
 			</div>
 		</div>
 		<script src="/lib/jquery-3.3.1.min.js"></script>
