alt wallpaper faq

--- a/livingworlds/support/index.html
+++ b/livingworlds/support/index.html
@@ -11,16 +11,21 @@
 			<h1 class="center">Living Worlds Support</h1>
 			<p>Please email <a href="mailto:support@pixfabrik.com">support@pixfabrik.com</a> with questions and comments!</p>
 			<h2>FAQ</h2>
+			
 			<h3>Can I use the Worlds as a live wallpaper?</h3>
 			<p>Yes, the Android version of the app supports live wallpaper!</p>
 			<p>Unfortunately iOS does not (yet) support live wallpapers. The iOS system does have a feature they call "live wallpaper", but it's actually just a short video. They also have true live wallpapers (which they call "dynamic"), but they only allow their own (created by Apple), not ones created by other developers (like us). Hopefully someday they'll change this policy, and the Living Worlds can run as live wallpapers on iOS as well…</p>
+			
 			<h3>Can I use Android dark mode with the live wallpaper?</h3>
 			<p>Unfortunately the dark mode in Android 9 (Pie) doesn't work with third party live wallpapers (such as Living Worlds). Android Q's dark mode does, however.</p>
+			
 			<h3>Why are the images portrait orientation when Joseph's demo is landscape?</h3>
 			<p><a href="http://www.effectgames.com/demos/worlds/">Joseph's demo</a> actually uses modified versions of the original Seize the Day art; Wizards of the Coast and Acclaim Entertainment commissioned updates and expansions to a few of the images for their game <a href="https://www.mobygames.com/game/magic-the-gathering-battlemage">Magic: The Gathering - Battlemage</a>, and those are the images Joseph used. There isn't a complete set of 12 months in that size, however, nor are any of the overlays made for that size. Because of that, and to as faithfully as possible re-create the original Seize the Day worlds, we're using the original graphics.</p>
+			
 			<h3>Will more Living World scenes come out after the end of the year?</h3>
 			<p>Reviving these images is already taking a lot of my time, but to make new ones would require us to get together tools that Mark could use to create new ones, and of course for Mark to take the time needed to make them.</p>
 			<p>In <a href="http://www.effectgames.com/effect/article-Q_A_with_Mark_J_Ferrari.html" target="_blank">this Q & A</a>, as well as in <a href="https://www.youtube.com/watch?v=aMcJ1Jvtef0" target="_blank">this talk</a>, Mark talks about some of the challenges involved in creating images like this today. If we had all the time in the world (i.e. if this app was making enough money for us to live on), we'd love to build new tools for Mark! With today's computers we could take the work he pioneered back in the 90s and bring it to a whole new level. Maybe someday…</p>
+			
 			<h3>Can the app synchronize with local sunset/sunrise times?</h3>
 			<p>It does not currently do this. It would be neat, but there are a couple of issues:</p>
 			<ul>
@@ -28,6 +33,12 @@
 				<li>We'd have to ask for your geolocation (or at least latitude, I suppose), and I'm kind of pleased with the fact that we don't ask for any user information at the moment.</li>
 			</ul>
 			<p>So, it's on the wish list, but no immediate plans to do it.</p>
+			
+			<h3>What is "Alt wallpaper tech"?</h3>
+			<p>This checkbox appears in the app's Settings panel on some Android devices. The short answer is if you're having trouble with the Living Worlds live wallpaper on your device, try toggling the checkbox.</p>
+			<p>The long answer: We are blessed to have many people using the Living Worlds live wallpaper, but we've found that with all the different devices and OS versions, it's hard to make sure everyone's device does the right thing! I've been working with people who've had trouble, and in the process I've developed two different technologies for running the animation in the live wallpaper. My hope was that one of them would be a clear winner, but it turns out there's no pattern which one works better. So, I'm giving you the option to switch between them if you're having trouble.</p>
+			<p>The default (older) tech is the only thing that works on devices with an OS earlier than Oreo, so on those devices the checkbox doesn't appear. On later devices, it's still the default, but the checkbox appears to allow you to switch if you're having trouble with the default. If you're curious about the technical details, <a href="https://stackoverflow.com/questions/57452827/android-how-to-use-a-virtualdisplay-to-host-a-webview-in-a-wallpaperservice" target="_blank">this Stack Overflow post</a> (from when I was still developing the alternate tech) goes into it a bit.</p>
+			
 		</div>
 		<div class="footer center">
 			<div class="links">
