Added credits page

--- a/livingworlds/credits/index.html
+++ b/livingworlds/credits/index.html
@@ -2,16 +2,29 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
-		<title>Living Worlds - Privacy Policy</title>
+		<title>Living Worlds - Credits</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="../style/main.css">
 	</head>
-	<body>
+	<body class="support-page">
 		<div class="middle">
-			<h1 class="center">Living Worlds Privacy Policy</h1>
-			<p>This privacy policy governs your use of the software application "Living Worlds - Mark Ferrari" (“Application”) for mobile devices that was created by Pixfabrik LLC.</p>
-			<p>The Application does not request, store, nor transmit any personally identifying information of any sort. It's just some pretty scenes that live on your device.</p>
-			<p>This privacy policy was last updated on December 4, 2018. Our privacy policy may change from time to time for any reason. If we make any material changes to our policies, we will place a prominent notice on our website or application. If you have any questions or concerns about our privacy policies, feel free to <a href="mailto:support@pixfabrik.com">contact us</a> at any time.</p>
+			<h1 class="center">Living Worlds Credits</h1>
+			<h2>Art &amp; Writing</h2>
+			<p><a href="https://www.markferrari.com/" target="_blank">Mark Ferrari</a></p>
+			<h2>Lead Programming</h2>
+			<p><a href="https://iangilman.com/" target="_blank">Ian Gilman</a></p>
+			<h2>Additional Technology</h2>
+			<p><a href="https://twitter.com/jhuckaby" target="_blank">Joseph Huckaby</a></p>
+			<h2>Programming Apprentices</h2>
+			<p><a href="https://twitter.com/TheEmmerino" target="_blank">Em Beauprey</a></p>
+			<p><a href="https://lizdominguez.github.io/">Liz Dominguez</a></p>
+			<p>Maxwell Graham</p>
+			<p><a href="http://seancswanson.com/">Sean Swanson</a></p>
+			<p><a href="http://eveworthington.com/">Eve Worthington</a></p>
+			<h2>Sound Design</h2>
+			<p><a href="????" target="_blank">Simon Schilling</a></p>
+			<h2>Original Sounds</h2>
+			<p><a href="https://freesound.org/people/Benboncan/sounds/64544/" target="_blank">Tawny Owls 2 by Benboncan</a></p>
 		</div>
 		<div class="footer center">
 			<div class="links">
