--- a/livingworlds/index.html
+++ b/livingworlds/index.html
@@ -45,11 +45,12 @@
 			<div class="links">
 				<a href="/">Pixfabrik</a> •
 				<a href="/livingworlds/">Living Worlds</a> •
+				<a href="/livingworlds/credits/">Credits</a> •
 				<a href="/livingworlds/support/">Support</a> •
 				<a href="/livingworlds/privacy/">Privacy Policy</a>
 			</div>
 			<div class="copyright">
-				&copy; 2018-2020, Pixfabrik LLC</div>
+				&copy; 2018-2021, Pixfabrik LLC</div>
 			</div>
 		</div>
 		<script src="/lib/jquery-3.3.1.min.js"></script>
