--- a/livingworlds/credits/index.html
+++ b/livingworlds/credits/index.html
@@ -18,11 +18,11 @@
 			<h2>Programming Apprentices</h2>
 			<p><a href="https://twitter.com/TheEmmerino" target="_blank">Em Beauprey</a></p>
 			<p><a href="https://lizdominguez.github.io/">Liz Dominguez</a></p>
-			<p>Maxwell Graham</p>
-			<p><a href="http://seancswanson.com/">Sean Swanson</a></p>
+			<p><a href="https://github.com/MaxwellTG">Maxwell Graham</a></p>
+			<p><a href="https://seancswanson.com/">Sean Swanson</a></p>
 			<p><a href="http://eveworthington.com/">Eve Worthington</a></p>
 			<h2>Sound Design</h2>
-			<p><a href="????" target="_blank">Simon Schilling</a></p>
+			<p><a href="https://soundcloud.com/essayessay/" target="_blank">Simon Schilling</a></p>
 			<h2>Original Sounds</h2>
 			<p><a href="https://freesound.org/people/Benboncan/sounds/64544/" target="_blank">Tawny Owls 2 by Benboncan</a></p>
 		</div>
