--- a/livingworlds/credits/index.html
+++ b/livingworlds/credits/index.html
@@ -21,10 +21,10 @@
 			<p><a href="https://github.com/MaxwellTG">Maxwell Graham</a></p>
 			<p><a href="https://seancswanson.com/">Sean Swanson</a></p>
 			<p><a href="http://eveworthington.com/">Eve Worthington</a></p>
-			<h2>Sound Design</h2>
+			<!-- <h2>Sound Design</h2>
 			<p><a href="https://soundcloud.com/essayessay/" target="_blank">Simon Schilling</a></p>
 			<h2>Original Sounds</h2>
-			<p><a href="https://freesound.org/people/Benboncan/sounds/64544/" target="_blank">Tawny Owls 2 by Benboncan</a></p>
+			<p><a href="https://freesound.org/people/Benboncan/sounds/64544/" target="_blank">Tawny Owls 2 by Benboncan</a></p> -->
 		</div>
 		<div class="footer center">
 			<div class="links">
