--- a/livingworlds/index.html
+++ b/livingworlds/index.html
@@ -38,7 +38,7 @@
 				</div>
 				<br/><br/>
 				<p class="center">Learn more about the <a href="https://medium.com/@iangilman/living-worlds-for-ios-android-46b4a4e9b048" target="_blank">history and technology</a> of this project.</p>
-				<p class="center">Sign up for <a href="http://eepurl.com/dE9C1r" target="_blank">our email list</a> or follow us on <a href="https://twitter.com/livingworldsart" target="_blank" alt="Living Worlds Twitter">Twitter</a>, <a href="https://instagram.com/livingworldsart/" target="_blank" alt="Living Worlds Instagram">Instagram</a>, or <a href="https://www.facebook.com/LivingWorldsArt" target="_blank" alt="Living Worlds Facebook">Facebook</a>.</p>
+				<p class="center">Sign up for <a href="http://eepurl.com/dE9C1r" target="_blank">our email list</a> or follow us on <a href="https://twitter.com/livingworldsart" target="_blank" alt="Living Worlds Twitter">Twitter</a>, <a href="https://instagram.com/livingworldsart/" target="_blank" alt="Living Worlds Instagram">Instagram</a>, <a href="https://www.tiktok.com/@livingworldsart" target="_blank" alt="Living Worlds TikTok">TikTok</a>, or <a href="https://www.facebook.com/LivingWorldsArt" target="_blank" alt="Living Worlds Facebook">Facebook</a>.</p>
 			</div>
 		</div>
 		<div class="footer center">
