--- a/livingworlds/credits/index.html
+++ b/livingworlds/credits/index.html
@@ -11,20 +11,30 @@
 			<h1 class="center">Living Worlds Credits</h1>
 			<h2>Art &amp; Writing</h2>
 			<p><a href="https://www.markferrari.com/" target="_blank">Mark Ferrari</a></p>
-			<h2>Lead Programming</h2>
+			<h2>Lead Programming &amp; Sound Design</h2>
 			<p><a href="https://iangilman.com/" target="_blank">Ian Gilman</a></p>
 			<h2>Additional Technology</h2>
 			<p><a href="https://twitter.com/jhuckaby" target="_blank">Joseph Huckaby</a></p>
 			<h2>Programming Apprentices</h2>
 			<p><a href="https://twitter.com/TheEmmerino" target="_blank">Em Beauprey</a></p>
-			<p><a href="https://lizdominguez.github.io/">Liz Dominguez</a></p>
-			<p><a href="https://github.com/MaxwellTG">Maxwell Graham</a></p>
-			<p><a href="https://seancswanson.com/">Sean Swanson</a></p>
-			<p><a href="http://eveworthington.com/">Eve Worthington</a></p>
-			<!-- <h2>Sound Design</h2>
-			<p><a href="https://soundcloud.com/essayessay/" target="_blank">Simon Schilling</a></p>
-			<h2>Original Sounds</h2>
-			<p><a href="https://freesound.org/people/Benboncan/sounds/64544/" target="_blank">Tawny Owls 2 by Benboncan</a></p> -->
+			<p><a href="https://lizdominguez.github.io/" target="_blank">Liz Dominguez</a></p>
+			<p><a href="https://github.com/MaxwellTG" target="_blank">Maxwell Graham</a></p>
+			<p><a href="https://seancswanson.com/" target="_blank">Sean Swanson</a></p>
+			<p><a href="http://eveworthington.com/" target="_blank">Eve Worthington</a></p>
+			<h2>Sounds</h2>
+			<p><a href="https://freesound.org/people/JustinAmolsch/sounds/519647/" target="_blank">Chickadee 1</a></p>
+			<p><a href="https://freesound.org/people/micndom/sounds/27387/" target="_blank">Chickadee 2</a></p>
+			<p><a href="https://freesound.org/people/straget/sounds/404687/" target="_blank">Crow 1</a></p>
+			<p><a href="https://freesound.org/people/InspectorJ/sounds/418262/" target="_blank">Crow 2</a></p>
+			<p><a href="https://freesound.org/people/_nuel/sounds/54973/" target="_blank">Crow 3</a></p>
+			<p><a href="https://freesound.org/people/klankbeeld/sounds/178150/" target="_blank">Snow on Umbrella</a></p>
+			<p><a href="https://freesound.org/people/krnd/sounds/90898/" target="_blank">Snowing in Dresden</a></p>
+			<p><a href="https://freesound.org/people/mzimny/sounds/494745/" target="_blank">Squirrel Chirping</a></p>
+			<p><a href="https://freesound.org/people/Benboncan/sounds/64544/" target="_blank">Tawny Owls</a></p>
+			<p><a href="https://freesound.org/people/y89312/sounds/139901/" target="_blank">Wolf</a></p>
+			<p><a href="https://freesound.org/people/reinsamba/sounds/54641/" target="_blank">Wren</a></p>
+			<br>
+			<p>Additional sounds from <a href="https://getsoundly.com/" target="_blank">Soundly</a>.</p>
 		</div>
 		<div class="footer center">
 			<div class="links">
