Seize the Day credits

--- a/livingworlds/credits/index.html
+++ b/livingworlds/credits/index.html
@@ -21,12 +21,19 @@
 			<p><a href="https://github.com/MaxwellTG" target="_blank">Maxwell Graham</a></p>
 			<p><a href="https://seancswanson.com/" target="_blank">Sean Swanson</a></p>
 			<p><a href="http://eveworthington.com/" target="_blank">Eve Worthington</a></p>
+			<h2>Based on Scenes from <em>Seize the Day</em> (1993)</h2>
+			<p>Produced by <a href="http://www.fregger.com/" target="_blank">Brad Fregger</a></p>
+			<p>Designed by Michael Feinberg &amp; <a href="https://scottkim.com/" target="_blank">Scott Kim</a></p>
+			<p>Art by <a href="https://www.markferrari.com/" target="_blank">Mark Ferrari</a></p>
+			<p>Programmed by <a href="https://iangilman.com/" target="_blank">Ian Gilman</a>, Michael Sandige, Sofie Vastano, Jack Bringloe, Steve Mariotti &amp; David Stafford</p>
 			<h2>Sounds</h2>
 			<p><a href="https://freesound.org/people/JustinAmolsch/sounds/519647/" target="_blank">Chickadee 1</a></p>
 			<p><a href="https://freesound.org/people/micndom/sounds/27387/" target="_blank">Chickadee 2</a></p>
 			<p><a href="https://freesound.org/people/straget/sounds/404687/" target="_blank">Crow 1</a></p>
 			<p><a href="https://freesound.org/people/InspectorJ/sounds/418262/" target="_blank">Crow 2</a></p>
 			<p><a href="https://freesound.org/people/_nuel/sounds/54973/" target="_blank">Crow 3</a></p>
+			<!-- <p><a href="https://freesound.org/people/craigsmith/sounds/479610/" target="_blank">Hawk 1</a></p>
+			<p><a href="https://freesound.org/people/1888software/sounds/575524/" target="_blank">Hawk 2</a></p> -->
 			<p><a href="https://freesound.org/people/klankbeeld/sounds/178150/" target="_blank">Snow on Umbrella</a></p>
 			<p><a href="https://freesound.org/people/krnd/sounds/90898/" target="_blank">Snowing in Dresden</a></p>
 			<p><a href="https://freesound.org/people/mzimny/sounds/494745/" target="_blank">Squirrel Chirping</a></p>
