--- a/livingworlds/credits/index.html
+++ b/livingworlds/credits/index.html
@@ -26,6 +26,7 @@
 			<p>Designed by Michael Feinberg &amp; <a href="https://scottkim.com/" target="_blank">Scott Kim</a></p>
 			<p>Art by <a href="https://www.markferrari.com/" target="_blank">Mark Ferrari</a></p>
 			<p>Programmed by <a href="https://iangilman.com/" target="_blank">Ian Gilman</a>, Michael Sandige, Sofie Vastano, Jack Bringloe, Steve Mariotti &amp; David Stafford</p>
+			<p>Weather Sequencing by <a href="http://www.fregger.com/" target="_blank">Brad Fregger</a>, <a href="https://twitter.com/jhuckaby" target="_blank">Joseph Huckaby</a> &amp; Ted Williams</p>
 			<h2>Sounds</h2>
 			<p><a href="https://freesound.org/people/JustinAmolsch/sounds/519647/" target="_blank">Chickadee 1</a></p>
 			<p><a href="https://freesound.org/people/micndom/sounds/27387/" target="_blank">Chickadee 2</a></p>
