--- a/livingworlds/credits/index.html
+++ b/livingworlds/credits/index.html
@@ -28,13 +28,18 @@
 			<p>Programmed by <a href="https://iangilman.com/" target="_blank">Ian Gilman</a>, Michael Sandige, Sofie Vastano, Jack Bringloe, Steve Mariotti &amp; David Stafford</p>
 			<p>Weather Sequencing by <a href="http://www.fregger.com/" target="_blank">Brad Fregger</a>, <a href="https://twitter.com/jhuckaby" target="_blank">Joseph Huckaby</a> &amp; Ted Williams</p>
 			<h2>Sounds</h2>
+			<p><a href="https://freesound.org/people/YleArkisto/sounds/253148/" target="_blank">Babbling Brook</a></p>		
 			<p><a href="https://freesound.org/people/JustinAmolsch/sounds/519647/" target="_blank">Chickadee 1</a></p>
 			<p><a href="https://freesound.org/people/micndom/sounds/27387/" target="_blank">Chickadee 2</a></p>
 			<p><a href="https://freesound.org/people/straget/sounds/404687/" target="_blank">Crow 1</a></p>
 			<p><a href="https://freesound.org/people/InspectorJ/sounds/418262/" target="_blank">Crow 2</a></p>
 			<p><a href="https://freesound.org/people/_nuel/sounds/54973/" target="_blank">Crow 3</a></p>
-			<!-- <p><a href="https://freesound.org/people/craigsmith/sounds/479610/" target="_blank">Hawk 1</a></p>
-			<p><a href="https://freesound.org/people/1888software/sounds/575524/" target="_blank">Hawk 2</a></p> -->
+			<p><a href="https://freesound.org/people/Glen_Hoban/sounds/435928/" target="_blank">Field Sounds</a></p>		
+			<p><a href="https://freesound.org/people/InspectorJ/sounds/399744/" target="_blank">Frogs</a></p>		
+			<p><a href="https://freesound.org/people/craigsmith/sounds/479610/" target="_blank">Hawk 1</a></p> 
+			<p><a href="https://freesound.org/people/1888software/sounds/575524/" target="_blank">Hawk 2</a></p>
+			<p><a href="https://freesound.org/people/Danjocross/sounds/503207/" target="_blank">Night Sounds</a></p>
+			<p><a href="https://freesound.org/people/kyles/sounds/451153/" target="_blank">Rain</a></p>		
 			<p><a href="https://freesound.org/people/klankbeeld/sounds/178150/" target="_blank">Snow on Umbrella</a></p>
 			<p><a href="https://freesound.org/people/krnd/sounds/90898/" target="_blank">Snowing in Dresden</a></p>
 			<p><a href="https://freesound.org/people/mzimny/sounds/494745/" target="_blank">Squirrel Chirping</a></p>
